--- a/angular/views/user/account.html
+++ b/angular/views/user/account.html
@@ -23,7 +23,7 @@
     <div class="cont-info">
         <div class="l-i">
             <span class="lf">День рождения:</span>
-            <span ng-bind="userProfile.birthday">24 августа 1973 г.</span>
+            <span ng-bind="userProfile.birthdayStr">24 августа 1973 г.</span>
         </div>
         <div class="l-i">
             <span class="lf">Город:</span>
