--- a/angular/views/user/account.html
+++ b/angular/views/user/account.html
@@ -47,7 +47,7 @@
         </div>
         <div class="l-i">
             <span class="lf">Сайт:</span>
-            <span><a ng-href="userProfile.webSite" target="_blank" ng-bind="userProfile.webSite">pupkin.ru</a></span>
+            <span><a href="{{userProfile.webSite}}" target="_blank" ng-bind="userProfile.webSite">pupkin.ru</a></span>
         </div>
     </div>
 
